@@ -7,8 +7,8 @@
   models are utilized as base-learners.
 }
 \usage{
-mboost(formula, data = list(), 
-       baselearner = c("bbs", "bols", "btree", "bss", "bns"), ...) 
+mboost(formula, data = list(),
+       baselearner = c("bbs", "bols", "btree", "bss", "bns"), ...)
 mboost_fit(blg, response, weights = rep(1, NROW(response)), offset = NULL,
            family = Gaussian(), control = boost_control(), oobweights =
            as.numeric(weights == 0))
@@ -16,7 +16,7 @@ mboost_fit(blg, response, weights = rep(1, NROW(response)), offset = NULL,
 \arguments{
   \item{formula}{ a symbolic description of the model to be fit. }
   \item{data}{ a data frame containing the variables in the model. }
-  \item{baselearner}{ a character specifying the component-wise base  
+  \item{baselearner}{ a character specifying the component-wise base
     learner to be used: \code{\link{bbs}} means P-splines with a
     B-spline basis (see Schmid and Hothorn 2008), \code{\link{bols}}
     linear models and \code{\link{btree}} boosts stumps.
@@ -27,45 +27,49 @@ mboost_fit(blg, response, weights = rep(1, NROW(response)), offset = NULL,
     P-splines with a B-spline basis, supplement them with their
     bivariate tensor product version to estimate interaction surfaces
     and spatial effects and also consider random effects base
-    learners.} 
-  \item{blg}{ a list of objects of class \code{blg}, as returned by all base-learners.}
+    learners.}
+  \item{blg}{ a list of objects of class \code{blg}, as returned by all
+    base-learners.}
   \item{response}{ the response variable.}
-  \item{weights}{ an optionally numeric vector of weights.}
-  \item{offset}{ an optionally numeric vector to be used as offset.}
-  \item{family}{a \code{Family} object.}
-  \item{control}{ a list of parameters controlling the algorithm.}
-  \item{oobweights}{ an additional vector of out-of-bag weights (used internally
-    by \code{cvrisk}.}
-  \item{\dots}{ additional arguments passed to \code{mboost}.}
+  \item{weights}{ a numeric vector of weights (optional).}
+  \item{offset}{ a numeric vector to be used as offset (optional).}
+  \item{family}{a \code{\link{Family}} object.}
+  \item{control}{ a list of parameters controlling the algorithm. For
+    more details see \code{\link{boost_control}}. }
+  \item{\dots}{  additional arguments passed to \code{\link{mboost_fit}},
+    including \code{weights}, \code{offset}, \code{family} and
+    \code{control}. }
 }
 \details{
+  The function implements component-wise functional gradient boosting in
+  a generic way. Basically, the algorithm is initialized with a function
+  for computing the negative gradient of the loss function (via its
+  \code{family} argument) and one or more base-learners (given as
+  \code{blg}). Usually \code{blg} and \code{response} are computed in
+  the functions \code{\link{gamboost}}, \code{\link{glmboost}},
+  \code{\link{blackboost}} or \code{mboost}.
 
-  The function implements component-wise functional gradient boosting
-  in a generic way. Basically,
-  the algorithm is initialized with a function for computing
-  the negative gradient of the loss function (via its \code{family} argument)
-  and one or more base-learners (given as \code{blg}).
-
-  The algorithm minimized the in-sample empirical risk defined as 
+  The algorithm minimized the in-sample empirical risk defined as
   the weighted sum (by \code{weights}) of the loss function (corresponding
   to the negative gradient) evaluated at the data.
 
-  The structure of the model is determined by the structure 
+  The structure of the model is determined by the structure
   of the base-learners. If more than one base-learner is given,
   the model is additive in these components.
 
-  Base-learners can be specified via a formula interface 
+  Base-learners can be specified via a formula interface
   (function \code{mboost}) or as a list of objects of class \code{bl},
   see \code{\link{bols}}.
 
   Note that the more convenient modelling interfaces \code{\link{gamboost}},
-  \code{\link{glmboost}} and \code{\link{blackboost}} all call 
+  \code{\link{glmboost}} and \code{\link{blackboost}} all call
   \code{mboost} directly.
 
 }
 \value{
   An object of class \code{mboost} with \code{\link{print}},
-  \code{\link{AIC}}, \code{\link{plot}} and \code{\link{predict}} methods being available.
+  \code{\link{AIC}}, \code{\link{plot}} and \code{\link{predict}}
+  methods being available.
 }
 \references{
 
@@ -92,7 +96,8 @@ mboost_fit(blg, response, weights = rep(1, NROW(response)), offset = NULL,
   \code{\link{blackboost}} for boosted trees. See e.g. \code{\link{bbs}}
   for possible base-learners. See \code{\link{cvrisk}} for
   cross-validated stopping iteration. Furthermore see
-  \code{\link{boost_control}}, \code{\link{Family}} and  \code{\link[mboost]{methods}}}
+  \code{\link{boost_control}}, \code{\link{Family}} and
+  \code{\link[mboost]{methods}}. }
 \examples{
 
   data("bodyfat", package = "mboost")
@@ -100,14 +105,14 @@ mboost_fit(blg, response, weights = rep(1, NROW(response)), offset = NULL,
   ### formula interface: additive Gaussian model with
   ### a non-linear step-function in `age', a linear function in `waistcirc'
   ### and a smooth non-linear smooth function in `hipcirc'
-  mod <- mboost(DEXfat ~ btree(age) + bols(waistcirc) + bbs(hipcirc), 
+  mod <- mboost(DEXfat ~ btree(age) + bols(waistcirc) + bbs(hipcirc),
                 data = bodyfat)
   layout(matrix(1:6, nc = 3, byrow = TRUE))
   plot(mod, ask = FALSE, main = "formula")
 
   ### the same
-  with(bodyfat, 
-       mod <- mboost_fit(list(btree(age), bols(waistcirc), bbs(hipcirc)), 
+  with(bodyfat,
+       mod <- mboost_fit(list(btree(age), bols(waistcirc), bbs(hipcirc)),
                          response = DEXfat))
   plot(mod, ask = FALSE, main = "base-learner")
 }
